--- a/www/app/apps/leads/lead_tabs.html
+++ b/www/app/apps/leads/lead_tabs.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view cache-view="false">
   <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
@@ -8,13 +8,16 @@
       </div>
     </div>
   </ion-nav-title>
-  <ng-form name="vm.leadForm" ng-init="forms.vm.leadForm=vm.leadForm" novalidate>
+  <ng-form role="form" name="leadform" ng-init="vm.forms.leadForm=leadform" novalidate>
 
     <ion-content style="height: calc(100% - 100px);" id="new_lead" padding="true">
       <fancy-select class="fancy-select text-right" header-text="בחר סוג ליד" items="vm.conf.types" value="vm.lead.LEAD_TYPE" value-property="TYPE" text-property="DESCRIPTION" allow-empty='false' text="בחרו סוג ליד" not-img-class="hidden" note-text=" : סוג ליד "
         value-changed="vm.onValueChanged(value)" get-custom-text="vm.getCustomText(value)" note-img-class="icon ion-android-checkmark-circle" item-class="text-right pele_rtl">
       </fancy-select>
 
+      <label ng-show="vm.submitted && !vm.lead.LEAD_TYPE" class="item no-border input-error text-right">
+          נא בחר סוג ליד
+      </label>
       <label class="item no-border item-toggle pele_rtl text-right">
           ליד עצמי
           <label class="toggle toggle-positive">
@@ -27,13 +30,13 @@
       <label class="pele_rtl item-text-wrap"><small>** ליד עצמי לא יעבור להמשך טיפול אצל הגורמים השונים בפלאפון</small>
         </label>
       <tab-slide-box>
-        <div class="tsb-icons ">
-          <div class="tsb-ic-wrp ">
-            <ion-scroll has-bouncing="false" scrollX="false" direction="x" scrollY="false" class="tsb-hscroll ">
+        <div class="tsb-icons">
+          <div class="tsb-ic-wrp">
+            <ion-scroll has-bouncing="false" scrollX="false" direction="x" scrollY="false" class="tsb-hscroll">
               <a ng-show="vm.extraSchema" class="triangle-isosceles small" on-finish-render="test()">
               פרטים נוספים
             </a>
-              <a class="triangle-isosceles small" on-finish-render="test() ">
+              <a class="triangle-isosceles small" on-finish-render="test()">
             פרטי לקוח
             </a>
             </ion-scroll>
@@ -48,50 +51,55 @@
           </ion-slide>
           <ion-slide>
             <div class="list lead-form pele_rtl text-right">
-              <label class="item no-border item-input ">
-              <span class="input-label ">שם פרטי</span>
+              <label class="item no-border item-input">
+              <span class="input-label">* שם פרטי</span>
               <input type="text" name="FIRST_NAME"  ng-model="vm.lead.FIRST_NAME" required>
             </label>
-              <label ng-show="vm.leadForm.first_name.$invalid && (vm.leadForm.first_name.$dirty || vm.submitted)" class="item no-border input-error ">
+              <label ng-show="leadform.FIRST_NAME.$invalid && (leadform.FIRST_NAME.$dirty || vm.submitted)" class="item no-border input-error">
               יש להזין שם פרטי
               </label>
 
               <label class="item no-border item-input">
-                <span class="input-label ">שם משפחה</span>
+                <span class="input-label">* שם משפחה</span>
                 <input type="text"  name="LAST_NAME"  ng-model="vm.lead.LAST_NAME" required>
               </label>
-              <label ng-show="vm.leadForm.LAST_NAME.$invalid && (vm.leadForm.LAST_NAME.$dirty || vm.submitted)" class="item no-border input-error">
+              <label ng-show="leadform.LAST_NAME.$invalid && (leadform.LAST_NAME.$dirty || vm.submitted)" class="item no-border input-error">
                   יש להזין שם משפחה
               </label>
 
-              <label class="item no-border item-input item-text-wrap ">
-                <span class="input-label ">מס טלפון לחזרה</span>
-                <input type="text"  name="PHONE_NO_1"  ng-model="vm.lead.PHONE_NO_1" required ng-pattern="/^0[0-9]{2}-?[0-9]{1}-?[0-9]{2}-?[0-9]{4}$/ ">
+              <label class="item no-border item-input item-text-wrap">
+                <span class="input-label">* מס טלפון לחזרה</span>
+                <input type="tel"  name="PHONE_NO_1"  ng-model="vm.lead.PHONE_NO_1" required ng-pattern="/^05\d-?[0-9]{1}-?[0-9]{2}-?[0-9]{4}$/">
               </label>
-              <label ng-show="vm.leadForm.PHONE_NO_1.$invalid &&  (vm.leadForm.PHONE_NO_1.$dirty  || vm.submitted)" class="item no-border input-error">
+              <label ng-show="leadform.PHONE_NO_1.$invalid &&  (leadform.PHONE_NO_1.$dirty  || vm.submitted)" class="item no-border input-error">
                 יש להזין מס' סלולארי תקין
              </label>
 
-              <label class="item no-border item-input item-text-wrap ">
-                <span class="input-label ">מספר טלפון נוסף</span>
-                <input type="text" name="PHONE_NO_2" ng-model="vm.lead.PHONE_NO_2" ng-pattern="/^0[0-9]{2}-?[0-9]{1}-?[0-9]{2}-?[0-9]{3,4}$/">
+              <label class="item no-border item-input item-text-wrap">
+                <span class="input-label">מספר טלפון נוסף</span>
+                <input type="tel" name="PHONE_NO_2" ng-model="vm.lead.PHONE_NO_2" ng-pattern="/^0[0-9]{2}-?[0-9]{1}-?[0-9]{2}-?[0-9]{3,4}$/">
               </label>
-              <label ng-show="vm.leadForm.PHONE_NO_2.$invalid && (vm.leadForm.PHONE_NO_2.$dirty  || vm.submitted)" class="item no-border  input-error">
+              <label ng-show="leadform.PHONE_NO_2.$invalid && (leadform.PHONE_NO_2.$dirty  || vm.submitted)" class="item no-border  input-error">
                 יש להזין מס' נוסף תקין
               </label>
-              <label class="item no-border item-input ">
-              <span class="input-label ">ת.ז לקוח</span>
-              <input type="text" name="CUSTOMER_ID" ng-model="vm.lead.CUSTOMER_ID" ng-pattern="/^[0-9]{2,10}$/ ">
+              <label class="item no-border item-input">
+              <span class="input-label">ת.ז לקוח</span>
+              <input type="text" name="CUSTOMER_ID" ng-model="vm.lead.CUSTOMER_ID" ng-pattern="/^[0-9]{2,10}$/">
             </label>
-              <label ng-show="vm.leadForm.CUSTOMER_ID.$invalid && (vm.leadForm.CUSTOMER_ID.$dirty  || vm.submitted)" class="item no-border  input-error ">
+              <label ng-show="leadform.CUSTOMER_ID.$invalid && (leadform.CUSTOMER_ID.$dirty  || vm.submitted)" class="item no-border  input-error">
               יש להזין מס' תקין'
               </label>
               <label class="item no-border item-input item-text-wrap">
-                <span class="input-label ">שעות רצויות לחזרה</span>
-                <input type="text" ng-model="vm.lead.PREFRRED_HOURS">
+                <span class="input-label">שעות רצויות לחזרה</span>
+                <input style="border:1px solid black;border-radius:4px" ng-model="vm.from_hour" type="number" min="8" max="20" step="1" size="3">
+                <input style="border:1px solid black;border-radius:4px" ng-model="vm.from_hour" type="number" min="8" max="20" step="1" size="3">
+                <input type="datetime">
+                <input type="date">
+
+                <!--input type="text" ng-model="vm.lead.PREFRRED_HOURS"-->
               </label>
               <label class="item no-border item-input item-text-wrap">
-              <span class="input-label ">הערות</span>
+              <span class="input-label">הערות</span>
 
             </label>
               <label class="item no-border item-input item-text-wrap">
@@ -100,12 +108,21 @@
             </div>
           </ion-slide>
       </tab-slide-box>
-
     </ion-content>
-    <div style="height:50px;max-height:50px" class="bar bar-footer bar-dark ">
-      <a class="button button-stable" ng-show="!lead.LEAD_ID" ng-click="vm.submit(vm.leadForm)" class="title ">פתיחת ליד</a>
-      <a class="button button-stable" ng-show="lead.LEAD_ID" ng-click="vm.submit(vm.leadForm)" class="title ">עדכן ליד עצמי</a>
-      <a class="button button-stable" ng-show="lead.LEAD_ID" ng-click="vm.delete(lead.LEAD_ID)" class="title ">מחק ליד עצמי</a>
+    <!--ion-footer-bar style="height:50px;max-height:50px" align-title="right">
+      <div class="row">
+        <div class="col">
+          <button class="button button-block button-large button-positive icon-right ion-paper-airplane" ng-click="showBtnActions()">פעולות</button>
+        </div>
+        <div class="col">
+          <button class="button button-block button-large button-balanced icon-right ion-document-text" ng-click="NotePopup()">הערה</button>
+        </div>
+      </div-->
+    </ion-footer-bar>
+    <div style="" class="bar bar-footer bar-clean">
+      <a class="button button-block  button-positive icon-right ion-paper-airplane" ng-show="!vm.lead.LEAD_ID" ng-click="vm.submit(leadform)" class="title">פתיחת ליד</a>
+      <a class="button button-block  button-balanced icon-right ion-document-text" ng-show="vm.lead.LEAD_ID" ng-click="vm.submit(leadform)" class="title">עדכן ליד עצמי</a>
+      <a class="button button-block  button-danger icon-right ion-document-text" ng-show="vm.lead.LEAD_ID" ng-click="vm.delete(vm.lead.LEAD_ID)" class="title">מחק ליד עצמי</a>
     </div>
   </ng-form>
 </ion-view>
